work with real charts

--- a/template.yaml
+++ b/template.yaml
@@ -42,7 +42,7 @@ Resources:
           Type: Api
           Properties:
             Path: /pdf
-            Method: post
+            Method: get
             RestApiId:
               Ref: ApiGatewayApi
 Outputs:
